--- a/POSApp/Views/Shared/_Layout.cshtml
+++ b/POSApp/Views/Shared/_Layout.cshtml
@@ -14,10 +14,10 @@
 <body>
     <div class="sidebar-menu">
         <ul>
-            <li class="menu-item"><i class="fa fa-home"></i>@Html.ActionLink("Menu", "View", "Menu")</li>
-            <li class="menu-item"><i class="fa fa-money"></i>@Html.ActionLink("Riwayat", "View", "Management")</li>
-            <li class="menu-item"><i class="fa fa-pie-chart"></i>@Html.ActionLink("Manajemen", "Index", "Foods")</li>
-            <li class="menu-item"><i class="fa fa-list-alt"></i>@Html.ActionLink("Inventory", "Index", "Inventories")</li>
+            <li class="menu-item"><img src="~/Images/HomeIcon.png" class="icn" width="50" height="50" />@Html.ActionLink("Menu", "View", "Menu")</li>
+            <li class="menu-item"><img src="~/Images/HistoryIcon.png" class="icn" width="50" height="50" />@Html.ActionLink("Riwayat", "View", "Management")</li>
+            <li class="menu-item"><img src="~/Images/ManageIcon.png" class="icn" width="50" height="50" />@Html.ActionLink("Manajemen", "Index", "Foods")</li>
+            <li class="menu-item"><img src="~/Images/InventoryIcon.png" class="icn" width="50" height="50" />@Html.ActionLink("Inventory", "Index", "Inventories")</li>
         </ul>
     </div>
     <div class="main-menu">
