--- a/POSApp/Content/Site.css
+++ b/POSApp/Content/Site.css
@@ -26,6 +26,39 @@
     transition: .5s ease;
 }
 
+.order-right-side {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 500px;
+    height: 100vh;
+    font-size: 20px;
+    background-color: #3700B3;
+    overflow: hidden;
+    white-space: nowrap;
+    box-shadow: 0px 0px 20px #d4d4d4;
+}
+
+.order-right-side .order-right-side-content {
+    padding: 90px 20px;
+}
+
+.order-right-side .order-right-side-content h1, .order-label-name-order, .order-data-displayed {
+    color: white;
+}
+
+.order-data-displayed-modal, .order-label-name-modal {
+    color: black;
+}
+
+.order-right-side:hover {
+    overflow-y: scroll;
+}
+
+.order-title {
+    padding: 10px 0px;
+}
+
 .sidebar-menu:hover {
     width: 200px;
     overflow-y: scroll;
@@ -60,7 +93,7 @@
 }
 
 .main-menu {
-    padding: 0px 200px;
+    padding: 90px 200px;
     transition: .5s ease;
     overflow: hidden;
 }
@@ -76,10 +109,6 @@
     overflow-y: scroll;
 }
 
-.main-menu {
-    padding-top: 90px;
-}
-
 .horizontal-line {
     width: 1500px;
     height: 1px;
@@ -92,21 +121,21 @@
     background-color: #3700B3;
 }
 
-.inventory-header, .food-header {
+.inventory-header, .food-header, .order-header {
     border-bottom: 3px solid #3700B3;
 }
 
-.inventory-index-left-top h2 {
+.inventory-index-left-top h2, .order-index-left-top h2 {
     font-size: 30px;
     font-weight: 600;
 }
 
-.inventory-index-left-top p {
+.inventory-index-left-top p, .order-index-left-top p {
     margin-bottom: 0px!important;
     color: #3700B3;
 }
 
-.inventory-index-right-top .inventory-form-search {
+.inventory-index-right-top .inventory-form-search, .order-index-right-top .order-form-search{
     position: absolute;
     margin-top: 0px;
     right: 0;
@@ -311,8 +340,6 @@
     margin-left: -20px;
     width: 237px;
 }
-
-
 
 ::-webkit-scrollbar {
     width: 7px;
