--- a/POSApp/Views/Foods/Index.cshtml
+++ b/POSApp/Views/Foods/Index.cshtml
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="food-modal">
-                        <button type="button" class="btn btn-food-modal" data-bs-toggle="modal" data-bs-target="#foodModal">
+                        <button type="button" class="btn btn-food-modal" data-toggle="modal" data-target="#foodModal">
                             Tambah Menu
                         </button>
 
@@ -35,7 +35,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="foodModalLabel">Form Tambah Menu</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
                                         @using (Html.BeginForm("Create", "Foods", FormMethod.Post))
@@ -82,7 +82,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Batal</button>
                                                     <button type="submit" class="btn btn-primary">Simpan</button>
                                                 </div>
                                             </div>
@@ -101,7 +101,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">@Html.DisplayFor(modelItem => item.foodName)</h5>
                                 <p class="card-text">Rp @Html.DisplayFor(modelItem => item.foodPrice)</p>
-                                <button type="button" class="btn btn-food-modal-edit" data-bs-toggle="modal" data-bs-target="#foodModalEdit">
+                                <button type="button" class="btn btn-food-modal-edit" data-toggle="modal" data-target="#foodModalEdit">
                                     <img src="~/Images/EditIcon.png" width="25" height="25" /> Edit Menu
                                 </button>
                                 <div class="modal fade" id="foodModalEdit" tabindex="-1" aria-labelledby="foodModalLabel" aria-hidden="true">
@@ -109,7 +109,7 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <h5 class="modal-title" id="foodModalLabel">Form Edit Menu</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
                                                 @using (Html.BeginForm("Edit", "Foods", FormMethod.Post))
@@ -123,9 +123,9 @@
                                                                 <div class="form-group">
                                                                     <label class="control-label col-md-6">Nama Makanan</label>
                                                                     <div class="col-md-10">
-                                                                        <input type="hidden" id="foodId" name="foodId" value="@Html.DisplayFor(modelItem => item.foodId)">
+                                                                        <input type="hidden" id="foodId @Html.DisplayFor(modelItem => item.foodId)" name="foodId" value="@Html.DisplayFor(modelItem => item.foodId)">
                                                                         <div class="form-group form_add_food">
-                                                                            <input type="text" class="form-control form-input-food" id="foodName" name="foodName" placeholder="Nasi goreng seafood..." value="@Html.DisplayFor(modelItem => item.foodName)">
+                                                                            <input type="text" class="form-control form-input-food" id="foodName @Html.DisplayFor(modelItem => item.foodId)" name="foodName" placeholder="Nasi goreng seafood..." value="@Html.DisplayFor(modelItem => item.foodName)">
                                                                         </div>
                                                                         @Html.ValidationMessageFor(model => model.FoodModel.foodName, "", new { @class = "text-danger" })
                                                                     </div>
@@ -135,7 +135,7 @@
                                                                     <label class="control-label col-md-6">Harga</label>
                                                                     <div class="col-md-10">
                                                                         <div class="form-group form_add_food">
-                                                                            <input type="text" class="form-control form-input-food" id="foodPrice" name="foodPrice" placeholder="10000" value="@Html.DisplayFor(modelItem => item.foodPrice)">
+                                                                            <input type="text" class="form-control form-input-food" id="foodPrice @Html.DisplayFor(modelItem => item.foodId)" name="foodPrice" placeholder="10000" value="@Html.DisplayFor(modelItem => item.foodPrice)">
                                                                         </div>
                                                                         @Html.ValidationMessageFor(model => model.FoodModel.foodPrice, "", new { @class = "text-danger" })
                                                                     </div>
@@ -145,7 +145,7 @@
                                                                     <label class="control-label col-md-6">Jenis</label>
                                                                     <div class="col-md-10">
                                                                         <div class="form-group form_add_food">
-                                                                            <select class="form-select form-input-food" aria-label="Default select example" id="foodType" name="foodType">
+                                                                            <select class="form-select form-input-food" aria-label="Default select example" id="foodType @Html.DisplayFor(modelItem => item.foodId)" name="foodType @Html.DisplayFor(modelItem => item.foodId)">
                                                                                 <option selected value="@Html.DisplayFor(modelItem => item.foodType)"></option>
                                                                                 <option value="Makanan">Makanan</option>
                                                                                 <option value="Minuman">Minuman</option>
@@ -160,7 +160,7 @@
                                                             <div class="row">
                                                                 <div class="col-md-12">
                                                                     <div class="button-on-modal-footer">
-                                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
+                                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Batal</button>
                                                                         <button class="btn food-delete-btn-yes">@Html.ActionLink("Hapus", "Deleted", "Foods", new { id = item.foodId }, null)</button>
                                                                         <button type="submit" class="btn btn-primary">Simpan</button>
                                                                     </div>
