--- a/POSApp/Views/Shared/_Layout.cshtml
+++ b/POSApp/Views/Shared/_Layout.cshtml
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="@Url.Content("~/Content/Site.css")" type="text/css" />
-    @Scripts.Render("~/bundles/modernizr")
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>@ViewBag.Title - POSApp</title>
 </head>
 <body>
     <div class="sidebar-menu">
         <ul>
-            <li class="menu-item"><img src="~/Images/HomeIcon.png" class="icn" width="50" height="50" />@Html.ActionLink("Menu", "View", "Menu")</li>
+            <li class="menu-item"><img src="~/Images/HomeIcon.png" class="icn" width="50" height="50" />@Html.ActionLink("Menu", "Index", "Transactions")</li>
             <li class="menu-item"><img src="~/Images/HistoryIcon.png" class="icn" width="50" height="50" />@Html.ActionLink("Riwayat", "View", "Management")</li>
             <li class="menu-item"><img src="~/Images/ManageIcon.png" class="icn" width="50" height="50" />@Html.ActionLink("Manajemen", "Index", "Foods")</li>
             <li class="menu-item"><img src="~/Images/InventoryIcon.png" class="icn" width="50" height="50" />@Html.ActionLink("Inventory", "Index", "Inventories")</li>
@@ -23,9 +22,8 @@
     <div class="main-menu">
         @RenderBody()
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
 </html> 
